[package]
name = "totk-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
eyre = "0.6.8"
indicatif = { version = "0.17.3", features = ["rayon"] }
jwalk = "0.8.1"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
parking_lot = "0.12.1"
rayon = "1.7.0"
roead = { version = "0.23.0", features = ["with-serde"] }
serde_yaml = "0.9.21"
zstd = "0.12.3+zstd.1.5.2"
